Drop use of the -remote option in Firefox helpers (bug #11601)
The -remote option was removed in Firefox 36.

Affected helpers: Firefox, Iceweasel, IceCat.

The Mozilla Browser and Netscape Navigator helpers are left alone
since the respective browsers are no longer actively developed.

https://bugzilla.xfce.org/show_bug.cgi?id=11601

--- a/exo-helper/helpers/firefox.desktop.in.in
+++ b/exo-helper/helpers/firefox.desktop.in.in
@@ -6,5 +6,5 @@ _Name=Mozilla Firefox
 StartupNotify=false
 X-XFCE-Binaries=firefox;firefox-gtk2;firefox-gtk;mozilla-firefox;
 X-XFCE-Category=WebBrowser
-X-XFCE-Commands=%B -remote "openURL(about:blank,new-window)";%B;
-X-XFCE-CommandsWithParameter=%B -remote "openURL(%s)";%B "%s";
+X-XFCE-Commands=%B;
+X-XFCE-CommandsWithParameter=%B "%s";
