--- a/exo-helper/helpers/icecat.desktop.in.in
+++ b/exo-helper/helpers/icecat.desktop.in.in
@@ -6,5 +6,5 @@ _Name=Icecat
 StartupNotify=false
 X-XFCE-Binaries=icecat;icecat-gtk2;icecat-gtk;
 X-XFCE-Category=WebBrowser
-X-XFCE-Commands=%B -remote "openURL(about:blank,new-window)";%B;
-X-XFCE-CommandsWithParameter=%B -remote "openURL(%s)";%B "%s";
+X-XFCE-Commands=%B;
+X-XFCE-CommandsWithParameter=%B "%s";
