--- a/exo-helper/helpers/iceweasel.desktop.in.in
+++ b/exo-helper/helpers/iceweasel.desktop.in.in
@@ -6,5 +6,5 @@ _Name=Iceweasel
 StartupNotify=false
 X-XFCE-Binaries=iceweasel;iceweasel-gtk2;iceweasel-gtk;
 X-XFCE-Category=WebBrowser
-X-XFCE-Commands=%B -remote "openURL(about:blank,new-window)";%B;
-X-XFCE-CommandsWithParameter=%B -remote "openURL(%s)";%B "%s";
+X-XFCE-Commands=%B;
+X-XFCE-CommandsWithParameter=%B "%s";
