--- a/exo-helper/helpers/xfce4-terminal.desktop.in.in
+++ b/exo-helper/helpers/xfce4-terminal.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=true
 X-XFCE-Binaries=xfce4-terminal;Terminal;xterminal;
 X-XFCE-Category=TerminalEmulator
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=%B -x "%s";
+X-XFCE-CommandsWithParameter=%B -x %s;
