--- a/exo-helper/helpers/nxterm.desktop.in.in
+++ b/exo-helper/helpers/nxterm.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=nxterm;
 X-XFCE-Category=TerminalEmulator
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=%B -e "%s";
+X-XFCE-CommandsWithParameter=%B -e %s;
