Do not abort builds due to deprecated declarations (Bug #11556) Since deprecated methods will not be dropped until GTK 4 and Xfce 4.14 targets GTK 3, these items are non-critical and should not block builds.

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -193,6 +193,8 @@ dnl *** Check for linker optimizations ***
 dnl **************************************
 XDT_FEATURE_LINKER_OPTS()
 
+CFLAGS="$CFLAGS -Wno-error"
+
 dnl ****************************************
 dnl *** Check for ELF visibility support ***
 dnl ****************************************
