Drop included category icons, both are now standard and no longer need (Bug #9992)

--- a/icons/48x48/Makefile.am
+++ b/icons/48x48/Makefile.am
@@ -3,13 +3,7 @@ appicondir = $(datadir)/icons/hicolor/48x48/apps
 appicon_DATA =								\
 	preferences-desktop-default-applications.png
 
-categoryicondir = $(datadir)/icons/hicolor/48x48/categories
-categoryicon_DATA =								\
-	applications-internet.png					\
-	applications-other.png
-
 EXTRA_DIST =								\
-	$(appicon_DATA)								\
-	$(categoryicon_DATA)
+	$(appicon_DATA)
 
 # vi:set ts=8 sw=8 noet ai nocindent:
