--- a/configure.ac.in
+++ b/configure.ac.in
@@ -21,7 +21,7 @@ m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libex
 dnl ********************************************
 dnl *** Full debug support for GIT snapshots ***
 dnl ********************************************
-m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [git], [full], [minimum])])
+m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [git], [yes], [minimum])])
 
 dnl ****************************
 dnl *** For intltool support ***
@@ -192,8 +192,6 @@ dnl **************************************
 dnl *** Check for linker optimizations ***
 dnl **************************************
 XDT_FEATURE_LINKER_OPTS()
-
-CFLAGS="$CFLAGS -Wno-error"
 
 dnl ****************************************
 dnl *** Check for ELF visibility support ***
