--- a/exo/exo-config.h.in
+++ b/exo/exo-config.h.in
@@ -63,10 +63,12 @@ G_BEGIN_DECLS
  * @minor: minor version (e.g. 2 for version 1.2.3)
  * @micro: micro version (e.g. 3 for version 1.2.3)
  *
+ * Checks the exo version.
+ *
  * Returns: %TRUE if the version of the exo header files is equal or
  *          better than the passed-in version.
  **/
-#define EXO_CHECK_VERSION(major,minor,micro) \
+#define EXO_CHECK_VERSION(major, minor, micro) \
   (EXO_MAJOR_VERSION > (major) \
    || (EXO_MAJOR_VERSION == (major) \
        && EXO_MINOR_VERSION > (minor)) \
@@ -108,4 +110,3 @@ const gchar *exo_check_version (guint required_major,
 G_END_DECLS
 
 #endif /* !__EXO_CONFIG_H__ */
-
