--- a/configure.ac.in
+++ b/configure.ac.in
@@ -12,10 +12,10 @@ m4_define([libexo_verinfo], [1:0:1])
 m4_define([libexo_version_api], [1])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [11])
-m4_define([libexo_version_micro], [2])
+m4_define([libexo_version_micro], [3])
 m4_define([libexo_version_nano], [])
 m4_define([libexo_version_build], [@REVISION@])
-m4_define([libexo_version_tag], [git])
+m4_define([libexo_version_tag], [])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [git], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
 
 dnl ********************************************
@@ -32,7 +32,7 @@ dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2004-2010 os-cillation.
-Copyright (c) 2004-2015 Xfce Development Team])
+Copyright (c) 2004-2017 Xfce Development Team])
 AC_INIT([exo], [libexo_version], [https://bugzilla.xfce.org/])
 AC_PREREQ([2.60])
 AC_CONFIG_MACRO_DIR([m4])
