--- a/exo-helper/helpers/google-chrome.desktop.in.in
+++ b/exo-helper/helpers/google-chrome.desktop.in.in
@@ -1,11 +1,11 @@
 
 [Desktop Entry]
 Version=1.0
-Icon=chromium
+Icon=google-chrome
 Type=X-XFCE-Helper
-_Name=Chromium
+_Name=Google Chrome
 StartupNotify=true
-X-XFCE-Binaries=chromium;chromium-browser;
+X-XFCE-Binaries=google-chrome;
 X-XFCE-Category=WebBrowser
 X-XFCE-Commands=%B;
 X-XFCE-CommandsWithParameter=%B "%s";
