--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -45,6 +45,7 @@ exo-helper/main.c
 
 exo-helper/helpers/aterm.desktop.in.in
 exo-helper/helpers/balsa.desktop.in.in
+exo-helper/helpers/brave.desktop.in.in
 exo-helper/helpers/caja.desktop.in.in
 exo-helper/helpers/chromium.desktop.in.in
 exo-helper/helpers/debian-sensible-browser.desktop.in.in
