Add Vivaldi browser

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -89,6 +89,7 @@ exo-helper/helpers/Thunar.desktop.in.in
 exo-helper/helpers/thunderbird.desktop.in.in
 exo-helper/helpers/urxvt.desktop.in.in
 exo-helper/helpers/vimprobable2.desktop.in.in
+exo-helper/helpers/vivaldi.desktop.in.in
 exo-helper/helpers/w3m.desktop.in.in
 exo-helper/helpers/xfce4-terminal.desktop.in.in
 exo-helper/helpers/xfe.desktop.in.in
