--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -57,6 +57,7 @@ exo-helper/helpers/eterm.desktop.in.in
 exo-helper/helpers/evolution.desktop.in.in
 exo-helper/helpers/firefox.desktop.in.in
 exo-helper/helpers/galeon.desktop.in.in
+exo-helper/helpers/geary.desktop.in.in
 exo-helper/helpers/google-chrome.desktop.in.in
 exo-helper/helpers/gnome-terminal.desktop.in.in
 exo-helper/helpers/icecat.desktop.in.in
