--- a/exo-open/exo-mail-reader.desktop.in
+++ b/exo-open/exo-mail-reader.desktop.in
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Exec=exo-open --launch MailReader %u
-Icon=internet-mail
+Icon=emblem-mail
 StartupNotify=true
 Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
