--- a/exo-helper/helpers/google-chrome.desktop.in.in
+++ b/exo-helper/helpers/google-chrome.desktop.in.in
@@ -5,7 +5,7 @@ Icon=google-chrome
 Type=X-XFCE-Helper
 _Name=Google Chrome
 StartupNotify=true
-X-XFCE-Binaries=google-chrome;
+X-XFCE-Binaries=google-chrome;google-chrome-stable;
 X-XFCE-Category=WebBrowser
 X-XFCE-Commands=%B;
 X-XFCE-CommandsWithParameter=%B "%s";
