--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -77,6 +77,7 @@ exo-helper/helpers/netscape-navigator.desktop.in.in
 exo-helper/helpers/nxterm.desktop.in.in
 exo-helper/helpers/opera-browser.desktop.in.in
 exo-helper/helpers/pcmanfm.desktop.in.in
+exo-helper/helpers/pcmanfm-qt.desktop.in.in
 exo-helper/helpers/qterminal.desktop.in.in
 exo-helper/helpers/qtfm.desktop.in.in
 exo-helper/helpers/qupzilla.desktop.in.in
