Add gtk3 icon chooser dialog test

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,12 @@ exo-open/exo-open
 po/*.gmo
 po/.intltool-merge-cache
 tests/test-exo-csource-data.c
+tests/test-exo-csource
+tests/test-exo-icon-chooser-dialog
+tests/test-exo-icon-chooser-dialog-gtk3
+tests/test-exo-noop
+tests/test-exo-string
+tests/test-exo-wrap-table
 *.1
 *.desktop
 *.la
