Add X-AppStream-Ignore=True to hide exo launchers from GNOME Software (bug #14588)

--- a/exo-helper/exo-preferred-applications.desktop.in
+++ b/exo-helper/exo-preferred-applications.desktop.in
@@ -12,3 +12,4 @@ _Comment=Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)
 X-XfcePluggable=true
 X-XfceHelpComponent=exo
 X-XfceHelpPage=preferred-applications
+X-AppStream-Ignore=True
