--- a/exo-open/exo-file-manager.desktop.in
+++ b/exo-open/exo-file-manager.desktop.in
@@ -8,5 +8,6 @@ Terminal=false
 Categories=Utility;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 X-XFCE-MimeType=inode/directory;x-scheme-handler/trash;
+X-AppStream-Ignore=True
 _Name=File Manager
 _Comment=Browse the file system
