--- a/exo-open/exo-mail-reader.desktop.in
+++ b/exo-open/exo-mail-reader.desktop.in
@@ -8,5 +8,6 @@ Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 X-XFCE-MimeType=x-scheme-handler/mailto;
+X-AppStream-Ignore=True
 _Name=Mail Reader
 _Comment=Read your email
