--- a/exo-open/exo-terminal-emulator.desktop.in
+++ b/exo-open/exo-terminal-emulator.desktop.in
@@ -7,5 +7,6 @@ StartupNotify=true
 Terminal=false
 Categories=Utility;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
+X-AppStream-Ignore=True
 _Name=Terminal Emulator
 _Comment=Use the command line
