--- a/exo-open/exo-web-browser.desktop.in
+++ b/exo-open/exo-web-browser.desktop.in
@@ -8,5 +8,6 @@ Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 X-XFCE-MimeType=x-scheme-handler/http;x-scheme-handler/https;
+X-AppStream-Ignore=True
 _Name=Web Browser
 _Comment=Browse the web
