Allow libexo-1 to be disabled (bug #15138)

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -51,13 +51,13 @@ content_files = 							\
 AM_CPPFLAGS =	 							\
 	-I$(top_srcdir) 						\
 	-I$(top_builddir) 						\
-	$(GTK_CFLAGS)							\
+	$(GTK2_CFLAGS)							\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(GTK_DOC_EXTRA_CFLAGS)
 
 GTKDOC_LIBS =  								\
 	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_API).la \
-	$(GTK_LIBS)
+	$(GTK2_LIBS)
 
 include $(top_srcdir)/gtk-doc.make
 
