--- a/exo-helper/exo-preferred-applications.in
+++ b/exo-helper/exo-preferred-applications.in
@@ -8,4 +8,4 @@
 # Browser, Mail Reader and Terminal Emulator.
 #
 
-exec @HELPERDIR@/exo-helper-@LIBEXO_VERSION_API@ --configure "$@"
+exec @HELPERDIR@/exo-helper-@LIBEXO2_VERSION_API@ --configure "$@"
