--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -4,8 +4,9 @@ AM_CPPFLAGS = 								\
 	-DDATADIR=\"$(datadir)\"					\
 	-DEXO_COMPILATION						\
 	-DG_LOG_DOMAIN=\"exo\"						\
-	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO_VERSION_API)\"	\
+	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO2_VERSION_API)\"	\
 	-DLIBEXO_VERSION_API=\"$(LIBEXO_VERSION_API)\"			\
+	-DLIBEXO2_VERSION_API=\"$(LIBEXO2_VERSION_API)\"			\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
 
 
