--- a/exo/exo-2.pc.in
+++ b/exo/exo-2.pc.in
@@ -3,7 +3,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-exo_api_version=2
+exo_api_version=@LIBEXO2_VERSION_API@
 
 Name: @PACKAGE_TARNAME@
 Description: Extension library for Xfce
