--- a/pixmaps/Makefile.am
+++ b/pixmaps/Makefile.am
@@ -1,5 +1,5 @@
 
-pixmapsdir = $(datadir)/pixmaps/exo-$(LIBEXO_VERSION_API)
+pixmapsdir = $(datadir)/pixmaps/exo-$(LIBEXO2_VERSION_API)
 pixmaps_DATA =								\
 	exo-thumbnail-frame.png
 
