--- a/exo-helper/Makefile.am
+++ b/exo-helper/Makefile.am
@@ -9,10 +9,10 @@ AM_CPPFLAGS = 								\
 	-DG_LOG_DOMAIN=\"exo-helper\"					\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
 
-exo_helperdir = $(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO_VERSION_API)
+exo_helperdir = $(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO2_VERSION_API)
 
 exo_helper_PROGRAMS = \
-	exo-helper-1
+	exo-helper-2
 
 exo_helper_built_sources =						\
 	exo-helper-enum-types.c						\
@@ -21,7 +21,7 @@ exo_helper_built_sources =						\
 exo_helper_headers =							\
 	exo-helper.h
 
-exo_helper_1_SOURCES =						\
+exo_helper_2_SOURCES =						\
 	$(exo_helper_built_sources)					\
 	$(exo_helper_headers)						\
 	exo-helper-chooser-dialog.c					\
@@ -35,15 +35,15 @@ exo_helper_1_SOURCES =						\
 	exo-helper.c							\
 	main.c
 
-exo_helper_1_CFLAGS =							\
+exo_helper_2_CFLAGS =							\
 	$(GTK3_CFLAGS)							\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(LIBXFCE4UI2_CFLAGS)
 
-exo_helper_1_DEPENDENCIES =						\
+exo_helper_2_DEPENDENCIES =						\
 	$(top_builddir)/exo/libexo-2.la
 
-exo_helper_1_LDADD =							\
+exo_helper_2_LDADD =							\
 	$(GTK3_LIBS)							\
 	$(LIBXFCE4UTIL_LIBS)						\
 	$(LIBXFCE4UI2_LIBS)						\
@@ -53,8 +53,8 @@ bin_SCRIPTS =								\
 	exo-preferred-applications
 
 exo-preferred-applications: Makefile $(srcdir)/exo-preferred-applications.in
-	sed -e 's,@HELPERDIR\@,$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO_VERSION_API),g' \
-	    -e 's,@LIBEXO_VERSION_API\@,$(LIBEXO_VERSION_API),g' 	\
+	sed -e 's,@HELPERDIR\@,$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO2_VERSION_API),g' \
+	    -e 's,@LIBEXO2_VERSION_API\@,$(LIBEXO2_VERSION_API),g' 	\
 	    < $(srcdir)/exo-preferred-applications.in			\
 	    > exo-preferred-applications
 
