--- a/exo-helper/helpers/thunderbird.desktop.in.in
+++ b/exo-helper/helpers/thunderbird.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=thunderbird;thunderbird-gtk2;thunderbird-gtk;mozilla-thunderbird;
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail-1 mozilla-remote %B "mailto:%s";@HELPERDIR@/exo-compose-mail-1 mozilla %B "mailto:%s";
+X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail-@LIBEXO2_VERSION_API@ mozilla-remote %B "mailto:%s";@HELPERDIR@/exo-compose-mail-@LIBEXO2_VERSION_API@ mozilla %B "mailto:%s";
