Remove library version from the perl script since it doesn't depend on the library

--- a/exo-helper/helpers/Makefile.am
+++ b/exo-helper/helpers/Makefile.am
@@ -62,14 +62,12 @@ desktop_in_in_files =							\
 desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 %.desktop.in: %.desktop.in.in
-	sed -e 's,\@HELPERDIR\@,$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO2_VERSION_API),g' \
-	    -e 's,@LIBEXO2_VERSION_API\@,$(LIBEXO2_VERSION_API),g' \
-		< $< > $@
+	sed -e 's,\@HELPERDIR\@,$(HELPER_PATH_PREFIX)/xfce4/exo,g' < $< > $@
 @INTLTOOL_DESKTOP_RULE@
 
-exo_composedir = $(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO2_VERSION_API)
+exo_composedir = $(HELPER_PATH_PREFIX)/xfce4/exo
 exo_compose_SCRIPTS =							\
-	exo-compose-mail-$(LIBEXO2_VERSION_API)
+	exo-compose-mail
 
 DISTCLEANFILES =							\
 	$(desktop_in_files)						\
@@ -78,6 +76,6 @@ DISTCLEANFILES =							\
 EXTRA_DIST =								\
 	$(defaults_DATA)						\
 	$(desktop_in_in_files)						\
-	exo-compose-mail-$(LIBEXO2_VERSION_API)
+	exo-compose-mail
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
