--- a/exo-helper/helpers/icedove.desktop.in.in
+++ b/exo-helper/helpers/icedove.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=icedove;
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail-@LIBEXO2_VERSION_API@ mozilla-remote %B "mailto:%s";@HELPERDIR@/exo-compose-mail-@LIBEXO2_VERSION_API@ mozilla %B "mailto:%s";
+X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail mozilla-remote %B "mailto:%s";@HELPERDIR@/exo-compose-mail mozilla %B "mailto:%s";
