exo-helper: Add gio-unix-2.0 dependency
On some systems, gtk-3.0 does not imply gio-unix-2.0, resulting in broken builds:

    exo-helper.c:47:10: fatal error: gio/gdesktopappinfo.h: No such file or directory
     #include <gio/gdesktopappinfo.h>
              ^~~~~~~~~~~~~~~~~~~~~~~

All direct dependencies ought to be declared!

Signed-off-by: Sean Davis <smd.seandavis@gmail.com>

--- a/exo-helper/Makefile.am
+++ b/exo-helper/Makefile.am
@@ -37,6 +37,7 @@ exo_helper_2_SOURCES =						\
 
 exo_helper_2_CFLAGS =							\
 	$(GTK3_CFLAGS)							\
+	$(GIO_UNIX_CFLAGS)							\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(LIBXFCE4UI2_CFLAGS)
 
@@ -45,6 +46,7 @@ exo_helper_2_DEPENDENCIES =						\
 
 exo_helper_2_LDADD =							\
 	$(GTK3_LIBS)							\
+	$(GIO_UNIX_LIBS)							\
 	$(LIBXFCE4UTIL_LIBS)						\
 	$(LIBXFCE4UI2_LIBS)						\
 	$(top_builddir)/exo/libexo-2.la
