--- a/exo-desktop-item-edit/Makefile.am
+++ b/exo-desktop-item-edit/Makefile.am
@@ -26,11 +26,11 @@ exo_desktop_item_edit_SOURCES =						\
 	main.c
 
 exo_desktop_item_edit_CFLAGS =						\
-	$(GTK3_CFLAGS)							\
+	$(GTK_CFLAGS)							\
 	$(GTHREAD_CFLAGS)						\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(GIO_CFLAGS)							\
-	$(LIBXFCE4UI2_CFLAGS)
+	$(LIBXFCE4UI_CFLAGS)
 
 exo_desktop_item_edit_LDFLAGS =						\
 	-no-undefined
@@ -39,11 +39,11 @@ exo_desktop_item_edit_DEPENDENCIES =					\
 	$(top_builddir)/exo/libexo-2.la
 
 exo_desktop_item_edit_LDADD =						\
-	$(GTK3_LIBS)							\
+	$(GTK_LIBS)							\
 	$(GTHREAD_LIBS)							\
 	$(LIBXFCE4UTIL_LIBS)						\
 	$(GIO_LIBS)							\
-	$(LIBXFCE4UI2_LIBS)						\
+	$(LIBXFCE4UI_LIBS)						\
 	$(top_builddir)/exo/libexo-2.la
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
