--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -4,34 +4,24 @@ AM_CPPFLAGS = 								\
 	-DDATADIR=\"$(datadir)\"					\
 	-DEXO_COMPILATION						\
 	-DG_LOG_DOMAIN=\"exo\"						\
-	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO2_VERSION_API)\"	\
+	-DHELPERDIR=\"$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO_VERSION_API)\"	\
 	-DLIBEXO_VERSION_API=\"$(LIBEXO_VERSION_API)\"			\
-	-DLIBEXO2_VERSION_API=\"$(LIBEXO2_VERSION_API)\"			\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
-
 
 libexo_headers =							\
 	exo-binding.h							\
-	exo-cell-renderer-ellipsized-text.h				\
 	exo-cell-renderer-icon.h					\
 	exo-execute.h							\
 	exo-gdk-pixbuf-extensions.h					\
 	exo-gtk-extensions.h						\
 	exo-gobject-extensions.h					\
-	exo-icon-bar.h							\
 	exo-icon-chooser-dialog.h					\
 	exo-icon-view.h							\
 	exo-job.h							\
 	exo-simple-job.h						\
 	exo-string.h							\
-	exo-toolbars-editor-dialog.h					\
-	exo-toolbars-editor.h						\
-	exo-toolbars-model.h						\
-	exo-toolbars-view.h						\
 	exo-tree-view.h							\
-	exo-utils.h							\
-	exo-wrap-table.h						\
-	exo-xsession-client.h
+	exo-utils.h
 
 libexo_built_public_sources =						\
 	exo-enum-types.h
@@ -44,7 +34,7 @@ libexo_built_sources =							\
 	exo-marshal.c							\
 	exo-marshal.h
 
-libexoincludedir = $(includedir)/exo-1/exo
+libexoincludedir = $(includedir)/exo-2/exo
 
 libexoinclude_HEADERS =							\
 	$(libexo_built_public_sources)					\
@@ -77,7 +67,6 @@ libexo_2_include_HEADERS =						\
 	exo-icon-chooser-model.h					\
 	exo-icon-view.h							\
 	exo-enum-types.h						\
-	exo-toolbars-model.h						\
 	exo-cell-renderer-icon.h					\
 	exo-thumbnail.h							\
 	exo-thumbnail-preview.h						\
@@ -111,7 +100,7 @@ libexo_2_la_SOURCES =							\
 libexo_2_la_CFLAGS =							\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(GIO_CFLAGS)							\
-	$(GTK3_CFLAGS)							\
+	$(GTK_CFLAGS)							\
 	$(LIBX11_CFLAGS)
 
 libexo_2_la_LDFLAGS =							\
@@ -124,81 +113,12 @@ libexo_2_la_LIBADD =							\
 	$(LIBXFCE4UTIL_LIBS)						\
 	$(GIO_LIBS)							\
 	$(GIO_UNIX_LIBS)							\
-	$(GTK3_LIBS)							\
+	$(GTK_LIBS)							\
 	$(LIBX11_LIBS)							\
 	-lm
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = exo-2.pc
-
-#
-# Gtk+ 2 support library
-#
-if ENABLE_GTK2_LIBRARY
-
-lib_LTLIBRARIES += libexo-1.la
-
-libexo_1_la_SOURCES =							\
-	$(libexoinclude_HEADERS)					\
-	$(libexo_built_sources)						\
-	exo-binding.c							\
-	exo-cell-renderer-ellipsized-text.c				\
-	exo-cell-renderer-icon.c					\
-	exo-config.c							\
-	exo-execute.c							\
-	exo-gdk-pixbuf-extensions.c					\
-	exo-gtk-extensions.c						\
-	exo-gobject-extensions.c					\
-	exo-icon-bar.c							\
-	exo-icon-chooser-dialog.c					\
-	exo-icon-chooser-model.c					\
-	exo-icon-chooser-model.h					\
-	exo-icon-view.c							\
-	exo-job.c							\
-	exo-job.h							\
-	exo-simple-job.c						\
-	exo-private.c							\
-	exo-private.h							\
-	exo-string.c							\
-	exo-thumbnail-preview.c						\
-	exo-thumbnail-preview.h						\
-	exo-thumbnail.c							\
-	exo-thumbnail.h							\
-	exo-toolbars-editor-dialog.c					\
-	exo-toolbars-editor.c						\
-	exo-toolbars-model.c						\
-	exo-toolbars-private.c						\
-	exo-toolbars-private.h						\
-	exo-toolbars-view.c						\
-	exo-tree-view.c							\
-	exo-utils.c							\
-	exo-wrap-table.c						\
-	exo-xsession-client.c
-
-libexo_1_la_CFLAGS =							\
-	$(GIO_CFLAGS)							\
-	$(GIO_UNIX_CFLAGS)							\
-	$(GTK2_CFLAGS)							\
-	$(LIBX11_CFLAGS)						\
-	$(LIBXFCE4UTIL_CFLAGS)
-
-libexo_1_la_LDFLAGS =							\
-	-export-dynamic							\
-	-version-info $(LIBEXO_VERINFO)					\
-	-export-symbols-regex "^[^_].*"					\
-	-no-undefined
-
-libexo_1_la_LIBADD =							\
-	$(GIO_LIBS)							\
-	$(GIO_UNIX_LIBS)							\
-	$(GTK2_LIBS)							\
-	$(LIBX11_LIBS)							\
-	$(LIBXFCE4UTIL_LIBS)						\
-	-lm
-
-pkgconfig_DATA += exo-1.pc
-
-endif
 
 ##
 ## Rules to auto-generate built sources
