--- a/configure.ac.in
+++ b/configure.ac.in
@@ -10,8 +10,7 @@ dnl ***************************
 dnl *** Version information ***
 dnl ***************************
 m4_define([libexo_verinfo], [1:0:1])
-m4_define([libexo_version_api], [1])
-m4_define([libexo2_version_api], [2])
+m4_define([libexo_version_api], [2])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [12])
 m4_define([libexo_version_micro], [11])
@@ -59,12 +58,10 @@ dnl ****************************
 dnl *** Subst libexo version ***
 dnl ****************************
 LIBEXO_VERSION_API=libexo_version_api()
-LIBEXO2_VERSION_API=libexo2_version_api()
 LIBEXO_VERSION_MAJOR=libexo_version_major()
 LIBEXO_VERSION_MINOR=libexo_version_minor()
 LIBEXO_VERSION_MICRO=libexo_version_micro()
 AC_SUBST([LIBEXO_VERSION_API])
-AC_SUBST([LIBEXO2_VERSION_API])
 AC_SUBST([LIBEXO_VERSION_MAJOR])
 AC_SUBST([LIBEXO_VERSION_MINOR])
 AC_SUBST([LIBEXO_VERSION_MICRO])
@@ -169,19 +166,11 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.42.0])
 XDT_CHECK_PACKAGE([GIO], [gio-2.0], [2.42.0])
-XDT_CHECK_PACKAGE([GTK3], [gtk+-3.0], [3.22.0])
+XDT_CHECK_PACKAGE([GTK], [gtk+-3.0], [3.22.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.42.0])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.12.0])
-XDT_CHECK_PACKAGE([LIBXFCE4UI2], [libxfce4ui-2], [4.12.0])
+XDT_CHECK_PACKAGE([LIBXFCE4UI], [libxfce4ui-2], [4.12.0])
 XDT_CHECK_OPTIONAL_PACKAGE([GIO_UNIX], [gio-unix-2.0], [2.42.0], [gio-unix], [GIO-Unix features])
-
-dnl ***********************************************************
-dnl *** Optional support for a GTK+2 version of the library ***
-dnl ***********************************************************
-XDT_CHECK_OPTIONAL_PACKAGE([GTK2],
-                           [gtk+-2.0], [2.24.0], [gtk2],
-                           [GTK+ 2 support])
-AM_CONDITIONAL([ENABLE_GTK2_LIBRARY], [test "x$GTK2_FOUND" = "xyes"])
 
 dnl *********************
 dnl *** Check for X11 ***
@@ -248,7 +237,6 @@ docs/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
 exo/Makefile
-exo/exo-1.pc
 exo/exo-2.pc
 exo/exo-config.h
 exo-csource/Makefile
@@ -271,9 +259,4 @@ echo "Build Configuration:"
 echo
 echo "* Debug Support:        $enable_debug"
 echo "* GNU Visibility:       $have_gnuc_visibility"
-if test x"$GTK2_FOUND" = x"yes"; then
-echo "* GTK+ 2 Support:       yes"
-else
-echo "* GTK+ 2 Support:       no"
-fi
 echo
